--- a/author.html
+++ b/author.html
@@ -126,22 +126,22 @@ window.Papercups = {
                                     <p>BCS Author is a browser based, light-weight, privacy oriented writing app.</p>
                                 </div><!-- End: Intro -->
                             </div>
-                            <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/typewriter.png" style="width: 100%;"></div>
+                            <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/undraw_font_re_efri.svg" style="width: 100%;"></div>
                         </div>
                     </div>
                 </section><!-- End: Highlight Phone -->
             </div><!-- Start: 1 Row 3 Columns -->
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/art.png" style="width: 100%;">
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_art_lover_re_fn8g%20(1).svg" style="width: 80%;">
                         <h3>Make it yours.</h3>
-                        <p>Customize your projects with customizable options.</p>
+                        <p>Customize your projects with customization options.</p>
                     </div>
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/user.png" style="width: 100%;">
-                        <h3>Distraction free.</h3>
-                        <p>Nestle into your favorite spot and get writing.</p>
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_mobile_life_re_jtih.svg" style="width: 100%;">
+                        <h3>Take it anywhere.</h3>
+                        <p>Compatible with all of your favorite mobile devices to make writing on the go easy.</p>
                     </div>
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/privacy.png" style="width: 100%;">
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_privacy_protection_nlwy(1).svg" style="width: 100%;">
                         <h3>Private.</h3>
                         <p>Your project lives on your device 100% and only you can access it.</p>
                     </div>
@@ -188,7 +188,29 @@ window.Papercups = {
                         </ul>
                     </div><!-- End: Careers -->
                     <!-- Start: Social Icons -->
-                    <div class="col-lg-3 item social"><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.gettr.com/user/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-bonfire"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://codeberg.org/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-code-working"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a>
+                    <div class="col-lg-3 item social"><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;margin: 0px;border-style: none;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-twitter">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"></path>
+                            </svg></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.gettr.com/user/borgcreative" target="_blank" style="border-radius: 5px;border-style: none;"><img style="width: 24px;height: 24px;" src="assets/img/gettr4.png"></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;border-style: none;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-bulb">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <path d="M3 12h1m8 -9v1m8 8h1m-15.4 -6.4l.7 .7m12.1 -.7l-.7 .7"></path>
+                                <path d="M9 16a5 5 0 1 1 6 0a3.5 3.5 0 0 0 -1 3a2 2 0 0 1 -4 0a3.5 3.5 0 0 0 -1 -3"></path>
+                                <line x1="9.7" y1="17" x2="14.3" y2="17"></line>
+                            </svg></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;border-style: none;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-bolt">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <polyline points="13 3 13 10 19 10 11 21 11 14 5 14 13 3"></polyline>
+                            </svg></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;border-style: none;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-instagram">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <rect x="4" y="4" width="16" height="16" rx="4"></rect>
+                                <circle cx="12" cy="12" r="3"></circle>
+                                <line x1="16.5" y1="7.5" x2="16.5" y2="7.501"></line>
+                            </svg></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;border-style: none;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-facebook">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"></path>
+                            </svg></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://codeberg.org/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;border-style: none;"><img style="width: 24px;height: 24px;" src="assets/img/codeberg.svg"></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;border-style: none;"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-github">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"></path>
+                            </svg></a>
                         <p class="copyright">Borg Creative Studios 2022</p>
                     </div><!-- End: Social Icons -->
                 </div>
