--- a/webdesign.html
+++ b/webdesign.html
@@ -122,9 +122,24 @@ window.Papercups = {
                             <div class="col-md-8">
                                 <!-- Start: Intro -->
                                 <div class="intro">
+                                    <h2>Let's launch your business to the next level!</h2>
+                                    <p>A successful 21st century business starts with a website.</p>
+                                </div><!-- End: Intro -->
+                            </div>
+                            <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/rocket.png" style="width: 100%;"></div>
+                        </div>
+                    </div>
+                </section><!-- End: Highlight Phone -->
+                <!-- Start: Highlight Phone -->
+                <section class="highlight-phone" style="background: #f6f6f6;">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <!-- Start: Intro -->
+                                <div class="intro">
                                     <h2>Our team has developed websites since 2016.</h2>
                                     <p>Our team specializes in privacy-friendly, feature-full static-sites.</p>
-                                    <p>We build sites with using HTML, JavaScript, CSS, Wordpress, and Wix.</p>
+                                    <p>We build sites with using HTML, JavaScript, CSS, Wordpress, Wix, and more.</p>
                                 </div><!-- End: Intro -->
                             </div>
                             <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/adview.png" style="width: 100%;"></div>
@@ -134,15 +149,15 @@ window.Papercups = {
             </div><!-- Start: 1 Row 3 Columns -->
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/website.png" style="width: 100%;">
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/user.png" style="width: 100%;">
                         <h3>It's yours.</h3>
                         <p>Unlike many developers, we do not own your site. Once we build it, you can either manage it yourself or have us do it!</p>
                     </div>
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/construction.png" style="width: 100%;padding-bottom: 20px;">
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_static_website_re_x70h.svg" style="width: 100%;padding-bottom: 20px;">
                         <h3>Built for you.</h3>
                         <p>Every website we build is designed to meet your specific needs.</p>
                     </div>
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/interactive.png" style="width: 100%;">
+                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/undraw_mobile_life_re_jtih.svg" style="width: 100%;">
                         <h3>Built for all devices.</h3>
                         <p>All websites are designed to function on mobile, desktop, and gaming systems!</p>
                     </div>
@@ -161,16 +176,16 @@ window.Papercups = {
                             <h3 class="name">Wave Digital Ministries</h3>
                             <p class="description">Our team developed and has been managing all of the Wave Digital Ministries websites since 2019.</p><a href="https://www.wavedm.net/" target="_blank">Check out the sites</a>
                         </div>
-                        <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="https://scholar.wavedm.net/icon.png" style="width: 70%;">
-                            <h3 class="name">WDM Scholar</h3>
-                            <p class="description">WDM Scholar is an example of an advanced static website. WDM Scholar is a Christian education website that is part of Wave Digital Ministries.</p><a href="https://scholar.wavedm.net/" target="_blank">Check out the site</a>
+                        <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/banner.png" style="width: 70%;">
+                            <h3 class="name">Christian Meme Channel</h3>
+                            <p class="description">A ministry blog built with Wordpress.org and integrated with Jetpack and Woo Commerce.</p><a href="https://cmc.wavedm.net/" target="_blank">Check out the site</a>
                         </div>
                     </div><!-- End: Projects -->
                     <!-- Start: Projects -->
                     <div class="row d-lg-flex justify-content-lg-center projects" style="text-align: center;">
-                        <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/bcss.jpg">
-                            <h3 class="name">BCS Social (Beta)</h3>
-                            <p class="description">BCS Social is an advanced static site designed as a social broadcasting platform. The project is still in beta.</p><a href="https://www.bcssocial.net/" target="_blank">Check out the site</a>
+                        <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/author_a_bright.png">
+                            <h3 class="name">Author by Borg Creative Studios</h3>
+                            <p class="description">Author is a static site with a customizable user experience using a custom Javascript system.</p><a href="https://author.borgcreative.com/" target="_blank">Check out the site</a>
                         </div>
                         <div class="col-sm-6 col-lg-4 item"><img class="img-fluid" src="assets/img/desk.jpg">
                             <h3 class="name">Jacob Borg Programming</h3>
