fixed product hunt button

--- a/bcs-lock.html
+++ b/bcs-lock.html
@@ -107,7 +107,7 @@ window.Papercups = {
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-lock.jpg&quot;) center / cover no-repeat;border-style: none;filter: saturate(100%);">
             <div class="text">
                 <h1>BCS Lock</h1>
-                <h5>Early Access</h5><a href="https://www.producthunt.com/posts/bcs-lock?utm_source=badge-review&utm_medium=badge&utm_souce=badge-bcs-lock#discussion-body" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/review.svg?post_id=313901&theme=dark" alt="BCS Lock - A simple password generator for MacOS | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+                <h5>Early Access</h5><a href="https://www.producthunt.com/posts/bcs-lock?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-bcs&#0045;lock" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=313901&theme=light" alt="BCS&#0032;Lock - A&#0032;simple&#0032;password&#0032;generator&#0032;for&#0032;MacOS | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
             </div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
