--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ window.Papercups = {
                 <div class="text-center">
                     <h2>Fruity Web Browser</h2>
                     <p>Minimalist web browsing for MacOS.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="fruity.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/fruity-pineapple-promo1.png" style="min-width: 250px;max-width: 70%;">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="fruity.html">learn more</a></p><img class="flex-sm-shrink-1 flex-md-shrink-1 flex-lg-shrink-0 flex-xl-shrink-0 flex-xxl-shrink-0" data-bss-disabled-mobile="true" data-aos="fade-up" data-aos-once="true" src="assets/img/fruitypromo.png" style="min-width: 250px;max-width: 70%;">
                 </div>
             </div><!-- End: Fruity -->
             <!-- Start: web design -->
