--- a/privacygalaxy.html
+++ b/privacygalaxy.html
@@ -13,8 +13,8 @@
     <meta property="og:image" content="assets/img/BCS%20Marketing%20wbg.jpg">
     <meta name="twitter:image" content="assets/img/BCS%20Marketing%20wbg.jpg">
     <meta name="description" content="A galaxy of privacy-friendly products.">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
-    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
+    <link rel="icon" type="image/svg+xml" sizes="256x256" href="assets/img/b.svg">
+    <link rel="icon" type="image/svg+xml" sizes="256x256" href="assets/img/b.svg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
