--- a/values.html
+++ b/values.html
@@ -88,7 +88,7 @@ window.Papercups = {
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="padding-bottom: 15px;box-shadow: 0px -10px 20px;">
-        <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borgmenu.svg" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1" style="color: #3d566e;border-style: none;"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon" style="color: #3d566e;"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="index.html"><img src="assets/img/borg_menu.png" style="width: 75px;"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1" style="color: #3d566e;border-style: none;"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon" style="color: #3d566e;"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="softwareproducts.html">Software</a></li>
@@ -105,7 +105,7 @@ window.Papercups = {
     </nav>
     <main class="page landing-page">
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);">
-            <div class="text"><img src="assets/img/IMG_1350.png" style="width: 70%;"></div>
+            <div class="text"><img src="assets/img/borgcreativestudios.png" style="width: 70%;"></div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;padding: 0px 0px 1px;">
             <div class="container">
