--- a/dashboard.html
+++ b/dashboard.html
@@ -13,8 +13,8 @@
     <meta property="og:type" content="website">
     <meta name="twitter:description" content="Our team develops software, produces video games, and creates digital media resources.">
     <meta name="description" content="Privacy-friendly marketing">
-    <link rel="icon" type="image/svg+xml" sizes="256x256" href="assets/img/b.svg">
-    <link rel="icon" type="image/svg+xml" sizes="256x256" href="assets/img/b.svg">
+    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
+    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
