--- a/adreport.html
+++ b/adreport.html
@@ -13,8 +13,8 @@
     <meta name="twitter:image" content="assets/img/fruity-banner.png">
     <meta name="twitter:description" content="A new web browser for MacOS.">
     <meta name="description" content="Borg Creative Studio's video work.">
-    <link rel="icon" type="image/svg+xml" sizes="256x256" href="assets/img/b.svg">
-    <link rel="icon" type="image/svg+xml" sizes="256x256" href="assets/img/b.svg">
+    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
+    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
