--- a/webdesign.html
+++ b/webdesign.html
@@ -13,8 +13,8 @@
     <meta name="description" content="An overview of our web design projects.">
     <meta name="twitter:image" content="assets/img/code.jpg">
     <meta name="twitter:description" content="Websites designed and built with Bootstrap, JavaScript, UI Kit, Bulma CSS, and more.">
-    <link rel="icon" type="image/svg+xml" sizes="256x256" href="assets/img/b.svg">
-    <link rel="icon" type="image/svg+xml" sizes="256x256" href="assets/img/b.svg">
+    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
+    <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
